# post-processing-tools-benchmarks

./: .gitignore  README.md  requirements.txt
benchmarks/: matrix.py  total_mag.py
confusion_matrix/: Cargo.toml
confusion_matrix/example/: main.py
confusion_matrix/src/: core.rs  main.rs  pybindings.rs
magnetization/: Cargo.toml  benchmark.py
magnetization/rustlib/: Cargo.toml
magnetization/rustlib/src/: core.rs  lib.rs  pybindings.rs
magnetization/src/: pybindings.rs
tensor/: Cargo.toml  README.md
tensor/src/: core.rs  lib.rs  pybindings.rs
